<resources>
    <string name="app_name">Co-green</string>

    <string name="co2_used">Your CO2 history</string>
    <string name="ranking">Top Score</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">LOGIN</string>
    <string name="create_new_account">Create new account</string>
    <string name="welcome">Welcome to CO GREEN</string>
    <!--input page-->
    <string name="transport_drive_distance">Driven distance</string>
    <string name="transport_drive_unit">KM</string>
    <string name="lifestyle_electricity">Electricity used</string>
    <string name="lifestyle_electricity_unit">KWH</string>


    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="rank">Rank</string>


    <string name="TOKEN">GAPCRCRTCF4RVRMT6K9W1YMK226K</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_found">No Data Found.</string>
</resources>