<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green2"
    android:orientation="vertical"
    tools:context=".InputFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/inkedinput" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="440dp"
        android:layout_height="559dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:background="@drawable/view_bg">

        <ImageView
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/car_bg" />

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/ic_baseline_drive_eta_24" />

        <EditText
            android:id="@+id/edtDriveDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingLeft="20dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:hint="@string/transport_drive_distance"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblDriveDistanceUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/edtDriveDistance"
            android:text="@string/transport_drive_unit" />

        <ImageView
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/elec_bg" />

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="215dp"
            android:background="@drawable/ic_baseline_electrical_services_24" />

        <EditText
            android:id="@+id/edtElecUsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingLeft="20dp"
            android:layout_marginTop="220dp"
            android:ems="10"
            android:hint="@string/lifestyle_electricity"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblElecUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:layout_toRightOf="@id/edtElecUsed"
            android:text="@string/lifestyle_electricity_unit" />

        <Button
            android:id="@+id/btnSaveInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:background="@drawable/savebutt_bg"
            android:text="Save" />
    </RelativeLayout>

</LinearLayout>